--- a/site/site.html
+++ b/site/site.html
@@ -10,7 +10,7 @@
 <body>
     <div class="header">
         <div style="margin-right: auto; margin-left:10px">
-            <h1 style="text-align:center;">My List &lt;3</h1>
+            <h1>My List &lt;3</h1>
         </div>
         <div id="dark-mode-button" class="dark-mode-button"></div>
     </div>
